@@ -1,14 +1,22 @@
-FROM gradle:6.9.1-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle clean build --no-daemon
+#Build stage
 
-FROM openjdk:8
+FROM gradle:latest AS BUILD
+WORKDIR /usr/app/
+COPY . .
+RUN gradle clean build
 
+# Package stage
+
+#FROM openjdk:latest
+#ENV JAR_NAME=sell_product-master-0.0.1-SNAPSHOT.jar
+#ENV APP_HOME=/usr/app
+#WORKDIR $APP_HOME
+#COPY --from=BUILD $APP_HOME .
+#EXPOSE 8080
+#ENTRYPOINT exec java -jar $APP_HOME/build/libs/$JAR_NAME
+
+FROM openjdk:latest
+ARG JAR_FILE=build/libs/sell_product-master-0.0.1-SNAPSHOT.jar
+COPY ${JAR_FILE} app.jar
 EXPOSE 8080
-
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-jar", "/app.jar"]
